# detr_boat_to_sim

./: .gitmodules  README.md  spawn_model.launch  spawn_model.py  train.py
docs/: buoy-navigation-demo.md
jv1_description/: CMakeLists.txt  model.config  model.sdf  package.xml
jv1_description/meshes/: jetsea.mtl
jv1_description/urdf/: honda_thruster_config.xacro  jv1.urdf.xacro  jv1.xacro  jv1_dynamics_plugin.xacro  macros.xacro  x40_thruster_config.xacro
jv1_description/urdf/thrust_layouts/: thrusters_h.xacro
